connexion et insertion des donnees dans la base de donnees

--- a/reinitialisation/index.html
+++ b/reinitialisation/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="bg-[#f5feff]  flex justify-center items-center">
+<body class="bg-[#f5feff]  flex justify-center items-center px-[20%]">
         <section class="w-[80%] flex flex-col justify-center items-center">
                 <div class="w-80 flex flex-col justify-center items-center">
                         <img src="../SkillGuard Flat Shield Logo.svg" alt="Skillguard mascot choix">
